--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,7 +89,7 @@
     "uuid": "^8.3.1",
     "webp-loader": "^0.6.0",
     "xlsx": "^0.16.9",
-    "yup": "^0.32.0"
+    "yup": "0.31.1"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.8.5",
