download env before generation

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,6 +25,7 @@ COPY --chown=node . /app
 
 RUN cp .env.example .env \
     && cp tsconfig.production.json tsconfig.json \
+    && npm run download-env \
     && npm run generate \
     && env NODE_ENV=production GOOGLE_CLOUD_STORAGE_BUCKET=x npm run build
 RUN npm run build-sourcemap
