--- a/backend/package.json
+++ b/backend/package.json
@@ -37,7 +37,7 @@
     "generate:nexus": "env NEXUS_REFLECTION=true NODE_ENV=production ts-node --transpile-only ./schema.ts",
     "build": "npm run download-env && npm run createExports && tsc --noEmit false",
     "start": "node dist/app.js",
-    "copy-env": "cp ./bin/kafkaConsumer/common/userCourseProgress/env.json ./dist/bin/kafkaConsumer/common/userCourseProgress/env.json",
+    "copy-env": "cp ./config/env.json ./dist/config/env.json",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "create-test-db": "env PGPASSWORD=prisma createdb -h localhost -p 5678 -U prisma -w testing || true",
