use TMC_HOST everywhere

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,7 @@ TMC_TOKEN=x
 TMC_CLIENT_ID=x
 TMC_CLIENT_SECRET=x
 QUIZNATOR_HOST=x
-TMC_HOST=https://fake.tmc.fi
+TMC_HOST=https://tmc.example.com
 AI_SLACK_URL=x
 DB_HOST=X
 DB_NAME=x
