--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@hookform/error-message": "0.0.5",
+    "@hookform/resolvers": "^1.2.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
@@ -77,6 +79,7 @@
     "react-dropzone": "^11.2.4",
     "react-fontawesome": "^1.7.1",
     "react-ga": "^3.3.0",
+    "react-hook-form": "^6.13.1",
     "responsive-loader": "^2.2.1",
     "sharp": "^0.25.4",
     "styled-components": "^5.2.1",
