--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,17 +23,18 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@date-io/core": "^2.9.0",
     "@date-io/luxon": "^2.9.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "@hookform/error-message": "0.0.5",
     "@hookform/resolvers": "^1.2.0",
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@material-ui/pickers": "^4.0.0-alpha.5",
-    "@material-ui/system": "^4.9.13",
+    "@material-ui/core": "^5.0.0-alpha.20",
+    "@material-ui/icons": "^5.0.0-alpha.20",
+    "@material-ui/lab": "^5.0.0-alpha.20",
+    "@material-ui/system": "^5.0.0-alpha.20",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^1.6.22",
     "@next/bundle-analyzer": "^10.0.3",
