--- a/backend/package.json
+++ b/backend/package.json
@@ -50,8 +50,7 @@
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^1.1.0",
     "@google-cloud/storage": "^5.6.0",
-    "@nexus/schema": "^0.19.2",
-    "@prisma/client": "^2.12.1",
+    "@prisma/client": "^2.14.0",
     "@sentry/integrations": "^5.28.0",
     "@sentry/node": "^5.28.0",
     "@types/compression": "^1.7.0",
@@ -88,7 +87,8 @@
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
     "newrelic": "^7.0.2",
-    "nexus-plugin-prisma": "^0.25.0",
+    "nexus": "^1.0.0",
+    "nexus-plugin-prisma": "^0.28.0",
     "node-rdkafka": "^2.9.1",
     "nodemailer": "^6.4.16",
     "pg": "^8.5.1",
