--- a/backend/package.json
+++ b/backend/package.json
@@ -63,7 +63,7 @@
     "@types/shortid": "0.0.29",
     "@types/uuid": "^8.3.0",
     "@types/websocket": "^1.0.1",
-    "@types/yup": "^0.29.10",
+    "@types/yup": "^0.29.11",
     "JSONStream": "^1.3.5",
     "apollo-server-express": "^2.19.0",
     "axios": "^0.21.0",
@@ -74,12 +74,12 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
-    "graphql-middleware": "^4.0.2",
+    "graphql-middleware": "^6.0.1",
     "graphql-scalars": "^1.5.0",
     "graphql-upload": "^11.0.0",
     "helmet": "^4.2.0",
     "jest-junit": "^12.0.0",
-    "knex": "^0.21.12",
+    "knex": "^0.21.15",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "micromustache": "^8.0.3",
@@ -94,14 +94,14 @@
     "pg": "^8.5.1",
     "pg-query-stream": "^4.0.0",
     "redis": "^3.0.2",
-    "sharp": "^0.25.4",
+    "sharp": "^0.27.0",
     "shortid": "^2.2.16",
     "tslib": "^2.0.3",
     "uuid": "^8.3.1",
     "websocket": "^1.0.32",
     "winston": "^3.3.3",
     "winston-sentry-log": "^1.0.19",
-    "yup": "0.31.1"
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
