--- a/backend/package.json
+++ b/backend/package.json
@@ -49,10 +49,10 @@
   "license": "ISC",
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^1.1.0",
-    "@google-cloud/storage": "^5.6.0",
+    "@google-cloud/storage": "^5.7.2",
     "@prisma/client": "^2.14.0",
-    "@sentry/integrations": "^5.28.0",
-    "@sentry/node": "^5.28.0",
+    "@sentry/integrations": "^5.30.0",
+    "@sentry/node": "^5.30.0",
     "@types/compression": "^1.7.0",
     "@types/graphql-upload": "^8.0.4",
     "@types/lodash": "^4.14.167",
@@ -75,9 +75,9 @@
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-middleware": "^6.0.1",
-    "graphql-scalars": "^1.5.0",
+    "graphql-scalars": "^1.7.0",
     "graphql-upload": "^11.0.0",
-    "helmet": "^4.2.0",
+    "helmet": "^4.3.1",
     "jest-junit": "^12.0.0",
     "knex": "^0.21.15",
     "lodash": "^4.17.20",
@@ -86,17 +86,17 @@
     "mime-types": "^2.1.28",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
-    "newrelic": "^7.0.2",
+    "newrelic": "^7.1.0",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0",
-    "node-rdkafka": "^2.9.1",
+    "node-rdkafka": "^2.10.1",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
     "pg-query-stream": "^4.0.0",
     "redis": "^3.0.2",
     "sharp": "^0.27.0",
     "shortid": "^2.2.16",
-    "tslib": "^2.0.3",
+    "tslib": "^2.1.0",
     "uuid": "^8.3.2",
     "websocket": "^1.0.33",
     "winston": "^3.3.3",
@@ -107,7 +107,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@prisma/cli": "^2.12.1",
+    "@prisma/cli": "^2.14.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-serve-static-core": "^4.17.18",
@@ -118,14 +118,14 @@
     "faker": "^5.1.0",
     "get-port": "^5.1.1",
     "graceful-fs": "^4.2.4",
-    "graphql-request": "^3.3.0",
+    "graphql-request": "^3.4.0",
     "jest": "^26.6.3",
     "nanoid": "^3.1.20",
     "nock": "^13.0.5",
     "tmc-client-js": "0.0.9",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "resolutions": {
