--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
@@ -40,7 +40,7 @@
     "@types/mime-types": "^2.1.0",
     "@types/react-fontawesome": "^1.6.4",
     "@types/uuid": "^8.3.0",
-    "@types/yup": "^0.29.10",
+    "@types/yup": "^0.29.11",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.0",
@@ -78,7 +78,7 @@
     "react-fontawesome": "^1.7.1",
     "react-ga": "^3.3.0",
     "responsive-loader": "^2.2.1",
-    "sharp": "^0.25.4",
+    "sharp": "^0.27.0",
     "styled-components": "^5.2.1",
     "styled-jsx": "^3.3.2",
     "tmc-client-js": "0.0.9",
@@ -89,7 +89,7 @@
     "uuid": "^8.3.1",
     "webp-loader": "^0.6.0",
     "xlsx": "^0.16.9",
-    "yup": "0.31.1"
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.8.5",
