--- a/backend/package.json
+++ b/backend/package.json
@@ -115,6 +115,7 @@
     "graceful-fs": "^4.2.4",
     "graphql-request": "^3.4.0",
     "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
     "nanoid": "^3.1.20",
     "nock": "^13.0.5",
     "tmc-client-js": "0.0.9",
