--- a/backend/package.json
+++ b/backend/package.json
@@ -89,6 +89,7 @@
     "node-rdkafka": "^2.10.1",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
+    "pg-query-stream": "^4.0.0",
     "redis": "^3.0.2",
     "sharp": "^0.27.0",
     "shortid": "^2.2.16",
