--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,8 @@
     "@material-ui/system": "^5.0.0-alpha.23",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^1.6.22",
-    "@next/bundle-analyzer": "^10.0.3",
-    "@next/mdx": "^10.0.3",
+    "@next/bundle-analyzer": "^10.0.5",
+    "@next/mdx": "^10.0.5",
     "@types/lodash": "^4.14.165",
     "@types/mime-types": "^2.1.0",
     "@types/react-fontawesome": "^1.6.4",
@@ -67,7 +67,7 @@
     "material-ui-confirm": "^2.1.1",
     "module-resolver": "^1.0.0",
     "morgan": "^1.10.0",
-    "next": "^10.0.3",
+    "next": "^10.0.5",
     "next-compose-plugins": "^2.2.1",
     "next-env": "^1.1.1",
     "next-fonts": "^1.5.1",
@@ -84,7 +84,7 @@
     "responsive-loader": "^2.2.1",
     "sharp": "^0.25.4",
     "styled-components": "^5.2.1",
-    "styled-jsx": "^3.3.2",
+    "styled-jsx": "^3.4.1",
     "tmc-client-js": "0.0.9",
     "typeface-open-sans-condensed": "^1.1.13",
     "typeface-roboto": "^1.1.13",
@@ -105,6 +105,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.4",
+    "@types/styled-jsx": "^2.2.8",
     "@types/testing-library__cypress": "^5.0.8",
     "apollo": "^2.31.2",
     "babel-plugin-import": "^1.13.3",
