hook-form resolvers fixed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.3.6",
+    "@apollo/client": "^3.3.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@date-io/core": "^2.9.0",
@@ -30,16 +30,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@hookform/error-message": "0.0.5",
-    "@hookform/resolvers": "^1.2.0",
-    "@material-ui/core": "^5.0.0-alpha.23",
-    "@material-ui/icons": "^5.0.0-alpha.23",
-    "@material-ui/lab": "^5.0.0-alpha.23",
-    "@material-ui/system": "^5.0.0-alpha.23",
+    "@hookform/resolvers": "^2.0.0-beta.3",
+    "@material-ui/core": "^5.0.0-alpha.24",
+    "@material-ui/icons": "^5.0.0-alpha.24",
+    "@material-ui/lab": "^5.0.0-alpha.24",
+    "@material-ui/system": "^5.0.0-alpha.24",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^1.6.22",
     "@next/bundle-analyzer": "^10.0.5",
     "@next/mdx": "^10.0.5",
-    "@types/lodash": "^4.14.165",
+    "@types/lodash": "^4.14.168",
     "@types/mime-types": "^2.1.0",
     "@types/react-fontawesome": "^1.6.4",
     "@types/uuid": "^8.3.0",
@@ -54,7 +54,7 @@
     "express": "^4.17.1",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
-    "graphql": "^15.4.0",
+    "graphql": "^15.5.0",
     "imagemin": "^7.0.1",
     "imagemin-webp": "^6.0.0",
     "isomorphic-unfetch": "^3.1.0",
@@ -76,7 +76,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-ga": "^3.3.0",
-    "react-hook-form": "^6.13.1",
+    "react-hook-form": "^6.14.2",
     "responsive-loader": "^2.3.0",
     "sharp": "^0.27.0",
     "styled-components": "^5.2.1",
