--- a/backend/package.json
+++ b/backend/package.json
@@ -70,10 +70,13 @@
     "axios": "^0.21.0",
     "compression": "^1.7.4",
     "concurrently": "^6.2.0",
+    "argon2": "^0.27.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
     "graphql-upload": "^12.0.0",
