--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "kafka-status": "node ./dist/bin/kafkaStatus.js",
     "seed": "node ./dist/bin/seed.js",
     "seedPoints": "node ./dist/bin/seedPoints.js",
+    "seedExercises": "node ./dist/bin/seedExercises.js",
     "createExports": "ts-node ./bin/createExports.ts",
     "kafka-bridge": "node ./dist/bin/kafkaBridge.js",
     "background-emailer": "node ./dist/bin/backgroundEmailer.js",
@@ -64,7 +65,6 @@
     "@types/uuid": "^8.3.0",
     "@types/websocket": "^1.0.1",
     "@types/yup": "^0.29.11",
-    "JSONStream": "^1.3.5",
     "apollo-server-express": "^2.19.1",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
@@ -77,6 +77,7 @@
     "graphql-scalars": "^1.7.0",
     "graphql-upload": "^11.0.0",
     "helmet": "^4.3.1",
+    "JSONStream": "^1.3.5",
     "knex": "^0.21.15",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
@@ -85,7 +86,7 @@
     "morgan": "^1.10.0",
     "newrelic": "^7.1.0",
     "nexus": "^1.0.0",
-    "nexus-plugin-prisma": "^0.28.0",
+    "nexus-plugin-prisma": "^0.30.0",
     "node-rdkafka": "^2.10.1",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
