--- a/backend/package.json
+++ b/backend/package.json
@@ -83,6 +83,7 @@
     "helmet": "^4.6.0",
     "JSONStream": "^1.3.5",
     "knex": "^0.95.6",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "luxon": "^1.27.0",
     "micromustache": "^8.0.3",
