--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "graphql": "^15.5.0",
     "imagemin": "^7.0.1",
     "imagemin-webp": "^6.0.0",
+    "immer": "^8.0.1",
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.20",
     "lqip-loader": "^2.2.1",
