--- a/frontend/packages/moocfi-auth/package.json
+++ b/frontend/packages/moocfi-auth/package.json
@@ -9,7 +9,7 @@
   },
   "author": "RAGE",
   "license": "ISC",
-  "dependencies": {
+  "peerDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "axios": "^0.21.1",
