--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "private": true,
   "dependencies": {
     "@types/mime-types": "^2.1.0",
-    "@types/node": "^14.14.20",
+    "@types/node": "^14.14.35",
     "os-name": "^4.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
     "eslint-plugin-eslint-custom-rules": "file:eslint-custom-rules",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.7",
+    "husky": "^5.2.0",
     "jest-junit": "^12.0.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "prettier": "prettier --write \"**/*.js\" \"**/*.ts\" \"**/*.tsx\"",
     "prettier-check": "prettier  --list-different \"**/*.js\" \"**/*.ts\" \"**/*.tsx\"",
     "eslint": "eslint '*/**/*.{js,ts,tsx}'",
-    "helm-lint": "helm lint ./helm"
+    "helm-lint": "helm lint ./helm",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -35,10 +36,5 @@
   "bugs": {
     "url": "https://github.com/rage/mooc.fi/issues"
   },
-  "homepage": "https://github.com/rage/mooc.fi#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": "./bin/check-code-style.sh && ./bin/eslint.sh"
-    }
-  }
+  "homepage": "https://github.com/rage/mooc.fi#readme"
 }
