try updating npm in backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,7 @@ RUN wget https://github.com/edenhill/librdkafka/archive/v1.5.3.tar.gz  -O - | ta
   && cd ..
 
 RUN mkdir -p /app && chown -R node /app
+RUN npm i -g npm
 
 USER node
 
