--- a/backend/package.json
+++ b/backend/package.json
@@ -116,6 +116,7 @@
     "graphql-request": "^3.4.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
+    "locate-path": "^6.0.0",
     "nanoid": "^3.1.22",
     "nock": "^13.0.11",
     "prisma": "^2.19.0",
