add typechecking to precommit hook

--- a/backend/package.json
+++ b/backend/package.json
@@ -43,7 +43,8 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "create-test-db": "env PGPASSWORD=prisma createdb -h localhost -p 5678 -U prisma -w testing || true",
-    "build-sourcemap": "tsc --noEmit false --sourceMap --outDir sourcemap"
+    "build-sourcemap": "tsc --noEmit false --sourceMap --outDir sourcemap",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
