--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@hookform/error-message": "0.0.5",
-    "@hookform/resolvers": "^2.0.0-beta.3",
+    "@hookform/resolvers": "^2.0.1",
     "@material-ui/core": "^5.0.0-alpha.29",
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/lab": "^5.0.0-alpha.29",
@@ -80,7 +80,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-ga": "^3.3.0",
-    "react-hook-form": "^6.14.2",
+    "react-hook-form": "^7.0.4",
     "responsive-loader": "^2.3.0",
     "sharp": "^0.27.2",
     "styled-jsx": "^3.4.4",
