--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "generate-graphql-types": "rm -rf ./static/types/generated/ && mkdir -p ./static/types/generated/  && apollo codegen:generate  --outputFlat --tagName=gql --target=typescript ./static/types/generated/",
     "generate-page-stubs": "node util/createStubs.js",
     "cypress:open": "./node_modules/.bin/cypress open",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "start:inspect": "NODE_ENV=production PORT=3021 NODE_OPTIONS=--inspect node server.js"
   },
   "keywords": [],
   "author": "",
@@ -41,8 +42,8 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^1.6.22",
     "@monaco-editor/react": "^4.0.11",
-    "@next/bundle-analyzer": "^10.1.1",
-    "@next/mdx": "^10.1.1",
+    "@next/bundle-analyzer": "^10.1.3",
+    "@next/mdx": "^10.1.3",
     "@types/lodash": "^4.14.168",
     "@types/mime-types": "^2.1.0",
     "@types/react-fontawesome": "^1.6.4",
@@ -69,7 +70,7 @@
     "module-resolver": "^1.0.0",
     "monaco-editor": "^0.21.2",
     "morgan": "^1.10.0",
-    "next": "^10.1.1",
+    "next": "^10.1.3",
     "next-compose-plugins": "^2.2.1",
     "next-env": "^1.1.1",
     "next-fonts": "^1.5.1",
