--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,24 +19,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.3.14",
+    "@apollo/client": "^3.3.15",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@date-io/core": "^2.10.7",
     "@date-io/luxon": "^2.10.8",
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
-    "@emotion/styled": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@hookform/error-message": "0.0.5",
-    "@hookform/resolvers": "^2.0.1",
-    "@material-ui/core": "^5.0.0-alpha.29",
+    "@hookform/error-message": "^2.0.0",
+    "@hookform/resolvers": "^2.3.1",
+    "@material-ui/core": "^5.0.0-alpha.30",
     "@material-ui/icons": "^5.0.0-alpha.28",
-    "@material-ui/lab": "^5.0.0-alpha.29",
-    "@material-ui/styles": "^5.0.0-alpha.29",
+    "@material-ui/lab": "^5.0.0-alpha.30",
+    "@material-ui/styles": "^5.0.0-alpha.30",
     "@material-ui/system": "^5.0.0-alpha.29",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^1.6.22",
@@ -60,14 +60,14 @@
     "graphql": "^15.5.0",
     "imagemin": "^7.0.1",
     "imagemin-webp": "^6.0.0",
-    "immer": "^8.0.1",
+    "immer": "^9.0.1",
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
     "luxon": "^1.26.0",
-    "material-ui-confirm": "^2.1.1",
+    "material-ui-confirm": "^2.1.2",
     "module-resolver": "^1.0.0",
-    "monaco-editor": "^0.21.2",
+    "monaco-editor": "^0.23.0",
     "morgan": "^1.10.0",
     "next": "^10.1.3",
     "next-compose-plugins": "^2.2.1",
@@ -80,21 +80,21 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-ga": "^3.3.0",
-    "react-hook-form": "^7.0.4",
+    "react-hook-form": "^7.1.1",
     "responsive-loader": "^2.3.0",
-    "sharp": "^0.27.2",
+    "sharp": "^0.28.1",
     "styled-jsx": "^3.4.4",
     "tmc-client-js": "0.0.9",
     "url": "^0.11.0",
     "uuid": "^8.3.2",
     "webp-loader": "^0.6.0",
     "xlsx": "^0.16.9",
-    "yup": "^0.32.8"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.13.13",
     "@cypress/code-coverage": "^3.8.5",
-    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/babel-plugin": "^11.3.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@testing-library/cypress": "^7.0.2",
     "@types/luxon": "^1.26.3",
