--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "dev": "node server.js",
     "build": "NODE_ENV=production next build",
     "export": "next export",
@@ -110,6 +111,7 @@
     "cypress": "^6.0.1",
     "cypress-image-snapshot": "^4.0.0",
     "express-graphql": "^0.12.0",
+    "got": "^11.8.2",
     "istanbul-lib-coverage": "^3.0.0",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
@@ -121,5 +123,8 @@
     ],
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true
+  },
+  "resolutions": {
+    "graphql": "14.7.0"
   }
 }
