--- a/frontend/package.json
+++ b/frontend/package.json
@@ -111,6 +111,7 @@
     "cypress": "^6.0.1",
     "cypress-image-snapshot": "^4.0.0",
     "express-graphql": "^0.12.0",
+    "fs-minipass": "^2.1.0",
     "got": "^11.8.2",
     "istanbul-lib-coverage": "^3.0.0",
     "nyc": "^15.1.0",
