--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "express": "^4.17.1",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
+    "graphql": "^15.5.0",
     "imagemin": "^7.0.1",
     "imagemin-webp": "^6.0.0",
     "immer": "^9.0.1",
@@ -103,7 +104,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/styled-jsx": "^2.2.8",
     "@types/testing-library__cypress": "^5.0.8",
-    "apollo": "^2.32.8",
+    "apollo": "^2.32.5",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-lodash": "^3.3.4",
     "cors": "^2.8.5",
@@ -121,8 +122,5 @@
     ],
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true
-  },
-  "resolutions": {
-    "graphql": "14.7.0"
   }
 }
