--- a/backend/package.json
+++ b/backend/package.json
@@ -115,6 +115,7 @@
     "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.21",
     "@types/mime-types": "^2.1.0",
+    "cross-env": "^7.0.3",
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.1.1",
