--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "dev": "node server.js",
     "build": "NODE_ENV=production next build",
     "export": "next export",
@@ -59,7 +58,7 @@
     "express": "^4.17.1",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
-    "graphql": "14.7.0",
+    "graphql": "^15.5.0",
     "imagemin": "^7.0.1",
     "imagemin-webp": "^6.0.0",
     "immer": "^9.0.1",
@@ -116,9 +115,6 @@
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
     "typescript": "^4.2.4"
-  },
-  "resolutions": {
-    "graphql": "14.7.0"
   },
   "nyc": {
     "exclude": [
