--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,11 +51,11 @@
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11",
     "@zeit/next-typescript": "^1.1.1",
+    "apexcharts": "^3.26.1",
     "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.0",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "chart.js": "^3.2.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "formik": "^2.2.6",
@@ -80,7 +80,7 @@
     "nookies": "^2.5.2",
     "papaparse": "^5.3.0",
     "react": "^17.0.2",
-    "react-chartjs-2": "^3.0.3",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-ga": "^3.3.0",
