--- a/backend/package.json
+++ b/backend/package.json
@@ -52,9 +52,9 @@
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^2.0.2",
     "@google-cloud/storage": "^5.8.5",
-    "@prisma/client": "^2.21.2",
-    "@sentry/integrations": "^6.2.3",
-    "@sentry/node": "^6.2.3",
+    "@prisma/client": "2.23.0",
+    "@sentry/integrations": "^6.5.1",
+    "@sentry/node": "^6.5.1",
     "@types/compression": "^1.7.0",
     "@types/graphql-upload": "^8.0.4",
     "@types/lodash": "^4.14.170",
@@ -66,25 +66,25 @@
     "@types/uuid": "^8.3.0",
     "@types/websocket": "^1.0.2",
     "@types/yup": "^0.29.11",
-    "apollo-server-express": "^2.23.0",
+    "apollo-server-express": "^2.25.0",
     "axios": "^0.21.0",
     "compression": "^1.7.4",
-    "concurrently": "^6.0.2",
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
     "graphql-upload": "^11.0.0",
-    "helmet": "^4.4.1",
+    "helmet": "^4.6.0",
     "JSONStream": "^1.3.5",
     "knex": "^0.95.6",
     "lodash": "^4.17.20",
-    "luxon": "^1.26.0",
+    "luxon": "^1.27.0",
     "micromustache": "^8.0.3",
     "mime-types": "^2.1.31",
     "morgan": "^1.10.0",
-    "newrelic": "^7.3.1",
+    "newrelic": "^7.5.0",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.35.0",
     "node-rdkafka": "^2.10.1",
@@ -101,8 +101,8 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.13.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
@@ -116,16 +116,16 @@
     "graceful-fs": "^4.2.6",
     "graphql-request": "^3.4.0",
     "jest": "^26.6.3",
-    "jest-junit": "^12.0.0",
+    "jest-junit": "^12.1.0",
     "locate-path": "^6.0.0",
     "nanoid": "^3.1.23",
-    "nock": "^13.0.11",
-    "prisma": "^2.21.2",
+    "nock": "^13.1.0",
+    "prisma": "2.23.0",
     "tmc-client-js": "0.0.9",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   },
   "resolutions": {
     "graphql-upload": "11.0.0"
