actually ignore correct test paths

--- a/backend/codecov.yml
+++ b/backend/codecov.yml
@@ -7,4 +7,6 @@ coverage:
       default:
         informational: true
 ignore:
-  - "test/**/*"
+  - "tests/**/*"
+  - "*/__test__/**/*"
+  - "__mocks__/**/*"
