added tier completions for open uni

--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,7 @@
     "download-env": "node ./bin/downloadEnv.js",
     "dev": "npm run download-env && ts-node-dev --transpile-only ./app.ts",
     "dev:typecheck": "tsc --noEmit --watch",
-    "generate:nexus": "env NEXUS_REFLECTION=true NODE_ENV=production ts-node --transpile-only ./schema.ts",
+    "generate:nexus": "cross-env NEXUS_REFLECTION=true NODE_ENV=production ts-node --transpile-only ./schema.ts",
     "build": "npm run download-env && npm run createExports && tsc --noEmit false",
     "start": "node dist/app.js",
     "copy-env": "cp ./config/env.json ./dist/config/env.json",
@@ -71,6 +71,7 @@
     "compression": "^1.7.4",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
