--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -53,5 +53,17 @@ spec:
             backend:
               serviceName: {{ $fullName }}-frontend
               servicePort: 80
+          - path: /Shibboleth.sso
+            backend:
+              serviceName: shibbo-test
+              servicePort: 80
+          - path: /Shibboleth.sso
+            backend:
+              serviceName: shibbo-test
+              servicePort: 443
+          - path: /connect-hy/post-login
+            backend:
+              serviceName: shibbo-test
+              servicePort: 80
     {{- end }}
   {{- end }}
