--- a/shibbo/supervisord.conf
+++ b/shibbo/supervisord.conf
@@ -1,7 +1,9 @@
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
+pidfile=/var/run/supervisor/supervisord.pid
+# user=supervisor
+# umask=0022
 
 [program:app]
 directory=/app
@@ -9,6 +11,8 @@ command=npm run start
 autorestart=true
 stdout_logfile=/dev/stdout
 redirect_stderr=true
+stdout_logfile_maxbytes=0
+stdout_maxbytes=0
 
 [program:shibd]
 command=/usr/local/bin/httpd-shibd-foreground
@@ -16,3 +20,5 @@ autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 redirect_stderr=true
+stdout_logfile_maxbytes=0
+stdout_maxbytes=0
