--- a/helm/templates/shibbo/shibbo-deployment.yml
+++ b/helm/templates/shibbo/shibbo-deployment.yml
@@ -36,8 +36,8 @@ spec:
           image: "{{ .Values.image.repository }}/shibbo-test:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: Always
           ports:
-            - name: http
-              containerPort: 6202
+            - name: shibbo-test
+              containerPort: 80
               protocol: TCP
           # livenessProbe:
           #   httpGet:
