--- a/backend/package.json
+++ b/backend/package.json
@@ -76,6 +76,7 @@
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
