--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -57,7 +57,7 @@ spec:
             backend:
               serviceName: shibbo-test
               servicePort: 80
-          - path: /connect
+          - path: /connect-hy
             backend:
               serviceName: shibbo-test
               servicePort: 80
