test if anything works with ingress

--- a/shibbo/Dockerfile
+++ b/shibbo/Dockerfile
@@ -1,24 +1,6 @@
 FROM unicon/shibboleth-sp
 
-RUN yum -y update
-RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash -
-RUN yum -y install nodejs npm mod_ssl
-RUN yum -y install epel-release
-RUN yum -y update
-RUN yum -y install supervisor
-RUN yum clean all
-
-RUN useradd -ms /bin/bash node 
-RUN useradd -G tty -U -ms /bin/bash supervisor
-
-COPY --chown=node . ./app
-# COPY . /app
-
-RUN mkdir -p /var/log/supervisor && chown -R supervisor:supervisor /var/log/supervisor/ 
-RUN mkdir -p /var/run/supervisor && chown -R supervisor:supervisor /var/run/supervisor/
-
-#&& chmod u=rwx,go=rx,a+s /var/log/myapplogs/
-COPY supervisord.conf /etc/supervisord/conf.d/supervisord.conf
+COPY --chown=shibd . ./app
 
 ### uncomment these if building locally
 # COPY shibboleth/shibboleth2.xml /etc/shibboleth/shibboleth2.xml
@@ -30,21 +12,13 @@ COPY supervisord.conf /etc/supervisord/conf.d/supervisord.conf
 # COPY shibboleth/attribute-map.xml /etc/shibboleth/attribute-map.xml
 # COPY shibboleth/shibd.logger /etc/shibboleth/shibd.logger
 
-USER node
-
 WORKDIR /app
 
-RUN rm -rf shibboleth && rm -rf docs
-RUN npm ci
-
-ENV NODE_ENV=production
-
-EXPOSE 80
+EXPOSE 80 443
 
 USER root
-# USER supervisor
-# CMD ["supervisord", "-n"]
-CMD ["sh", "./bin/run.sh"]
+
+CMD ["/usr/local/bin/httpd-shibd-foreground"]
 
 ARG GIT_COMMIT=""
 LABEL GIT_COMMIT=${GIT_COMMIT}
