--- a/helm/templates/shibbo/shibbo-deployment.yml
+++ b/helm/templates/shibbo/shibbo-deployment.yml
@@ -88,6 +88,10 @@ spec:
                 path: certs/mooc.fi.key
               - key: mooc.fi.crt
                 path: certs/mooc.fi.crt
+              - key: haka_test_metadata_signed.xml
+                path: haka_test_metadata_signed.xml
+              - key: haka_testi_2018_sha2.crt
+                path: haka_testi_2018_sha2.crt
         - name: google-cloud-storage-serviceaccount
           secret:
             secretName: google-cloud-storage-serviceaccount
