get backend/frontend url from secret

--- a/helm/templates/frontend-deployment.yml
+++ b/helm/templates/frontend-deployment.yml
@@ -30,3 +30,6 @@ spec:
             requests:
               memory: 300Mi
               cpu: 200m
+          envFrom:
+          - secretRef:
+              name: frontend-secret
