--- a/frontend/package.json
+++ b/frontend/package.json
@@ -98,7 +98,10 @@
     "@emotion/babel-plugin": "^11.3.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@testing-library/cypress": "^7.0.6",
+    "@types/compression": "^1.7.1",
+    "@types/express": "^4.17.13",
     "@types/luxon": "^1.26.5",
+    "@types/morgan": "^1.9.3",
     "@types/papaparse": "^5.2.5",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
