--- a/shibbo/supervisord.conf
+++ b/shibbo/supervisord.conf
@@ -13,6 +13,7 @@ stdout_logfile=/dev/stdout
 redirect_stderr=true
 stdout_logfile_maxbytes=0
 stdout_maxbytes=0
+environment=NODE_ENV="production"
 
 [program:shibd]
 command=/usr/local/bin/httpd-shibd-foreground
