--- a/shibbo/package.json
+++ b/shibbo/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
