test parallelizing tests with circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
   build_backend:
     docker:
       - image: eu.gcr.io/moocfi-public/cloud-sdk-node:latest
+    parallelism: 4
     steps:
       - checkout
       - setup_remote_docker
