--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,9 @@ jobs:
       - run:
           name: "Tests"
           command: |
+            cd backend 
             TESTFILES=$(circleci tests glob "**/*.test.ts" | circleci tests split)
+            cd ..
             "bin/run-backend-tests.sh $TESTFILES"
       - store_test_results:
           path: ~/project/backend/coverage/junit/
