--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "test": "jest",
     "upgrade-interactive": "npm-check --update",
     "fetch-ai-completions": "node ./dist/bin/fetchAiCompletions.js",
@@ -66,7 +65,7 @@
     "@types/uuid": "^8.3.0",
     "@types/websocket": "^1.0.2",
     "@types/yup": "^0.29.11",
-    "apollo-server-express": "^2.25.0",
+    "apollo-server-express": "^3.3.0",
     "axios": "^0.21.0",
     "compression": "^1.7.4",
     "concurrently": "^6.2.0",
@@ -74,6 +73,7 @@
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "fs-capacitor": "^6.2.0",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
     "graphql-upload": "^12.0.0",
@@ -127,9 +127,6 @@
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
-  },
-  "resolutions": {
-    "graphql-upload": "11.0.0"
   },
   "jest": {
     "preset": "ts-jest",
