--- a/backend/package.json
+++ b/backend/package.json
@@ -132,6 +132,7 @@
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.2"
   },
   "jest": {
