--- a/backend/package.json
+++ b/backend/package.json
@@ -115,6 +115,7 @@
     "@types/express-serve-static-core": "^4.17.21",
     "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.21",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mime-types": "^2.1.0",
     "cross-env": "^7.0.3",
     "esm": "^3.2.25",
