--- a/backend/package.json
+++ b/backend/package.json
@@ -77,7 +77,6 @@
     "graphql-scalars": "^1.9.0",
     "graphql-upload": "^12.0.0",
     "helmet": "^4.6.0",
-    "JSONStream": "^1.3.5",
     "knex": "^0.95.6",
     "lodash": "^4.17.20",
     "luxon": "^1.27.0",
@@ -92,6 +91,7 @@
     "pg": "^8.6.0",
     "pg-query-stream": "^4.1.0",
     "redis": "^3.1.1",
+    "scramjet": "^4.36.0",
     "sharp": "^0.28.3",
     "shortid": "^2.2.16",
     "uuid": "^8.3.2",
