--- a/shibbo/package.json
+++ b/shibbo/package.json
@@ -13,25 +13,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@prettier/plugin-xml": "^0.13.1",
-    "@types/node": "^15.12.0",
+    "@prettier/plugin-xml": "^1.1.0",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.10.2",
+    "@types/passport": "^1.0.7",
     "dotenv": "^10.0.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.3.1",
+    "nodemon": "^2.0.13",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.0.0",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.2"
+    "ts-node": "^10.2.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
-    "axios": "^0.21.1",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "axios": "^0.22.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
+    "graphql": "^15.6.0",
+    "graphql-request": "^3.5.0",
+    "morgan": "^1.10.0",
     "nookies": "^2.5.2",
+    "passport": "^0.5.0",
+    "passport-saml": "^3.2.0",
     "unfuck-utf8-headers-middleware": "^1.0.1"
   }
 }
