--- a/shibbo/.env.example
+++ b/shibbo/.env.example
@@ -4,5 +4,6 @@ BACKEND_URL=http://localhost:4000
 API_URL=http://localhost:4000/api
 AUTH_URL=http://localhost:4000/auth
 
+SP_URL=http://localhost:5000
 HY_IDP_URL=http://localhost:7000/saml/sso
 HAKA_IDP_URL=http://localhost:7002/saml/sso
