--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -75,7 +75,7 @@ spec:
           #     servicePort: 80
           - path: /sp
             backend:
-              serviceName: {{ $fullname }}-auth
+              serviceName: {{ $fullName }}-auth
               servicePort: 80
     {{- end }}
   {{- end }}
