fix secret name in auth-deployment

--- a/helm/templates/auth/auth-deployment.yml
+++ b/helm/templates/auth/auth-deployment.yml
@@ -60,7 +60,7 @@ spec:
               readOnly: true
           envFrom:
             - secretRef:
-                name: saml-secret
+                name: auth-secret
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
