--- a/helm/templates/resync-user-app-datum-cronjob.yml
+++ b/helm/templates/resync-user-app-datum-cronjob.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: fetch-user-app-datum
+  name: resynd-user-app-datum
   labels:
     {{- include "helm.labels" . | nindent 4 }}
 spec:
