--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "fetch-avoin-links": "node ./dist/bin/fetchAvoinLinks.js",
     "sync-tmc-users": "node ./dist/bin/syncTMCUsers.js",
     "send-ai-statistics": "node ./dist/bin/sendAiStatistics.js",
+    "course-stats-emailer": "node ./dist/bin/courseStatsEmailer.js",
     "import-organizations": "node ./dist/bin/importOrganizations.js",
     "parse-file": "node ./dist/bin/parseFile.js",
     "start-kafka-consumers": "concurrently --kill-others --restart-tries 2 npm:kafka-consumer-*",
