--- a/helm/templates/fetch-user-app-datum-cronjob.yml
+++ b/helm/templates/fetch-user-app-datum-cronjob.yml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: fetch-user-app-datum
@@ -8,6 +8,8 @@ spec:
   schedule: "12 * * * *"
   startingDeadlineSeconds: 3600
   concurrencyPolicy: Forbid
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 3
   jobTemplate:
     metadata:
       labels:
