--- a/helm/templates/fetch-user-field-values-cronjob.yml
+++ b/helm/templates/fetch-user-field-values-cronjob.yml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: fetch-user-field-values
@@ -8,6 +8,8 @@ spec:
   schedule: "30 2 * * *"
   startingDeadlineSeconds: 900
   concurrencyPolicy: Forbid
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 3
   jobTemplate:
     metadata:
       labels:
