--- a/helm/templates/kafka/restarter/restarter-cronjob.yml
+++ b/helm/templates/kafka/restarter/restarter-cronjob.yml
@@ -1,10 +1,12 @@
 # Puppeteer/Headless Chrome needs this
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: kafka-consumer-restarter
 spec:
   concurrencyPolicy: Forbid
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 3
   schedule: "2 * * * *"
   jobTemplate:
     spec:
