--- a/helm/templates/remove-duplicate-completions--cronjob.yml
+++ b/helm/templates/remove-duplicate-completions--cronjob.yml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: remove-duplicate-completions
@@ -8,6 +8,8 @@ spec:
   schedule: "4/30 * * * *"
   startingDeadlineSeconds: 1800
   concurrencyPolicy: Forbid
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 3
   jobTemplate:
     metadata:
       labels:
