frontend patch deps

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "post-install": "cd node_modules/cweb-bin/lib && node install.js && cd ../../..",
     "dev": "node server.js",
     "build": "NODE_ENV=production next build",
     "export": "next export",
@@ -33,7 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@hookform/error-message": "^2.0.0",
-    "@hookform/resolvers": "^2.8.2",
+    "@hookform/resolvers": "^2.8.5",
     "@material-ui/core": "^5.0.0-alpha.35",
     "@material-ui/icons": "^5.0.0-alpha.35",
     "@material-ui/lab": "^5.0.0-alpha.35",
@@ -44,10 +45,10 @@
     "@monaco-editor/react": "^4.3.1",
     "@next/bundle-analyzer": "^10.2.3",
     "@next/mdx": "^10.2.3",
-    "@types/lodash": "^4.14.175",
+    "@types/lodash": "^4.14.178",
     "@types/mime-types": "^2.1.1",
     "@types/react-fontawesome": "^1.6.5",
-    "@types/uuid": "^8.3.1",
+    "@types/uuid": "^8.3.3",
     "@types/yup": "^0.29.13",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-upload-client": "^16.0.0",
@@ -55,13 +56,13 @@
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "compression": "^1.7.4",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "formik": "^2.2.9",
     "formik-material-ui": "^3.0.1",
     "graphql": "^15.6.1",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^6.0.0",
-    "immer": "^9.0.6",
+    "immer": "^9.0.7",
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
@@ -99,12 +100,12 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@testing-library/cypress": "^7.0.6",
     "@types/luxon": "^1.26.5",
-    "@types/papaparse": "^5.3.0",
-    "@types/react": "^17.0.29",
-    "@types/react-dom": "^17.0.9",
+    "@types/papaparse": "^5.3.1",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/styled-jsx": "^2.2.8",
     "@types/testing-library__cypress": "^5.0.8",
-    "apollo": "^2.33.6",
+    "apollo": "^2.33.9",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-lodash": "^3.3.4",
     "cors": "^2.8.5",
