--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,14 @@ jobs:
           name: "Build image"
           command: "bin/build-docker-auth.sh"
       - run:
+          name: "Tests"
+          command: "bin/run-auth-tests.sh"
+      - store_test_results:
+          path: ~/project/auth/coverage/junit/
+      - store_artifacts:
+          path: ~/project/auth/coverage/jest
+          destination: auth-tests
+      - run:
           name: "Push image if on master"
           command: "bin/push-docker-auth-image.sh"  
     
